# LoveProof-backend

./: .env.deploy  .env.development  .gitignore  DockerFile  Dockerfile  README.md  manage.py  pyproject.toml  requirements.txt
LoveProof/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
chat/: admin.py  consumers.py  middleware.py  models.py  routing.py  serializers.py  urls.py  views.py
chat/services/: service_consumers.py
community/: admin.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
community/services/: views_service.py
missions/: models.py
users/: admin.py  filters.py  models.py  pagination.py  serializers.py  tasks.py  urls.py  views.py
users/services/: views_service.py
